# GraphicLib

./: CMakeLists.txt  a.out  figures.h  main.cpp  printer.cpp  printer.h  vector.cpp  vector.h
glad/: glad.h
headers/: figures.h  printer.h  vector.h
src/: glad.c  printer.cpp  vector.cpp
